# lesson_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lesson_project/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
lessons/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py
lessons/migrations/: 0001_initial.py
