[project]
name = "lesson-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "celery>=5.6.2",
    "celery-types>=0.24.0",
    "django>=4.2,<5.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]
