[project]
name = "lesson-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<4"
dependencies = [
    "black>=25.12.0",
    "celery>=5.6.2",
    "django>=4.2,<5.0",
    "flower>=2.0.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "uv>=0.1.0",
]
