[project]
name = "lesson-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<4"
dependencies = [
    "celery>=5.6.2",
    "django==6.0.1",
    "flower>=2.0.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "uv>=0.1.0",
]
